--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.4.0",
+		"react-toastify": "^11.0.5",
 		"tailwind-merge": "^3.0.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
