--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 REACT_APP_ENV=development
 VITE_APP_ENV=development
+
+VITE_API_URL=http://localhost:8000/api
+VITE_GOOGLE_CLIENT_ID=581090375629-kds9jjgs2pk60iqe05fmjhpf6pps2nsv.apps.googleusercontent.com
+
+# Para producción
+# VITE_API_URL=https://tu-dominio.com/api
