--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"google-auth-library": "^10.1.0",
 		"isbot": "^5.1.17",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.484.0",
