--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"crypto-js": "^4.2.0",
 		"date-fns": "^4.1.0",
 		"google-auth-library": "^10.1.0",
 		"isbot": "^5.1.17",
