--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/crypto-js": "^4.2.2",
 		"@types/lodash": "^4.17.16",
 		"@types/node": "^20.17.27",
 		"@types/react": "^19.0.1",
