--- a/.env
+++ b/.env
@@ -1,10 +1,19 @@
+
+# Variables de entorno para el entorno de desarrollo
 REACT_APP_ENV=development
 VITE_APP_ENV=development
 
-VITE_API_URL=http://localhost:8000/api
+# Variables de entorno para el entorno de producción
+# REACT_APP_ENV=production
+# VITE_APP_ENV=production
+
+
 VITE_GOOGLE_CLIENT_ID=581090375629-kds9jjgs2pk60iqe05fmjhpf6pps2nsv.apps.googleusercontent.com
 
+# URL de la API para desarrollo
+VITE_API_URL=http://localhost:8000/api
+
 # Para producción
-# VITE_API_URL=https://tu-dominio.com/api
+# VITE_API_URL=https://api.comersia.app/api
 
 REACT_APP_CACHE_KEY=nTIonshRityLkSomPLIgMayOUsEmPLeW
