--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ VITE_API_URL=http://localhost:8000/api
 # VITE_API_URL=https://api.comersia.app/api
 
 REACT_APP_CACHE_KEY=nTIonshRityLkSomPLIgMayOUsEmPLeW
+
+REACT_APP_API_BASE_URL=http://127.0.0.1:8000
+
+# Para desarrollo local
+REACT_APP_STORAGE_URL=http://127.0.0.1:8000/storage
