Finished Before Testing without errors

--- a/.env
+++ b/.env
@@ -10,15 +10,14 @@ VITE_APP_ENV=development
 
 VITE_GOOGLE_CLIENT_ID=581090375629-kds9jjgs2pk60iqe05fmjhpf6pps2nsv.apps.googleusercontent.com
 
-# URL de la API para desarrollo
-VITE_API_URL=http://localhost:8000/api
 
-# Para producción
-# VITE_API_URL=https://api.comersia.app/api
+# URL Desarrollo
+URL_BASE=http://localhost:8000
 
+# URL Producción
+# URL_BASE=https://api.comersia.app
+
+VITE_API_URL={URL_BASE}/api
 REACT_APP_CACHE_KEY=nTIonshRityLkSomPLIgMayOUsEmPLeW
-
-REACT_APP_API_BASE_URL=http://127.0.0.1:8000
-
-# Para desarrollo local
-REACT_APP_STORAGE_URL=http://127.0.0.1:8000/storage
+REACT_APP_API_BASE_URL={URL_BASE}
+REACT_APP_STORAGE_URL={URL_BASE}/storage
