Notification Fixed and improved

--- a/.env
+++ b/.env
@@ -11,10 +11,10 @@ REACT_APP_API_BASE_URL={URL_BASE}
 REACT_APP_STORAGE_URL={URL_BASE}/storage
 
 # URL Desarrollo
-URL_BASE=http://localhost:8000
+VITE_URL_BASE=http://localhost:8000
 
 # URL Producción
-# URL_BASE=https://api.comersia.app
+# VITE_URL_BASE=https://api.comersia.app
 
 VITE_API_URL={URL_BASE}/api
 
