--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
@@ -46,12 +47,13 @@
 		"eslint": "^9.23.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
+		"happy-dom": "^18.0.1",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"tailwindcss": "^4.0.16",
 		"typescript": "^5.7.2",
 		"vite": "^6.2.3",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.0.9"
+		"vitest": "^3.2.4"
 	}
 }
