Config SRI Created

--- a/.env
+++ b/.env
@@ -24,3 +24,8 @@ VITE_DATAFAST_WIDGET_URL=https://eu-test.oppwa.com/v1/paymentWidgets.js
 # Script de validación no disponible actualmente - comentado para evitar errores 404
 # VITE_DATAFAST_VALIDATION_SCRIPT=https://www.datafast.com.ec/js/dfAdditionalValidations1.js
 VITE_DATAFAST_LOGO_URL=https://www.datafast.com.ec/images/logo.png
+
+# SRI API Configuration
+VITE_SRI_API_URL=http://localhost:3100
+VITE_SRI_EMAIL=businessconnect@businessconnect.com.ec
+VITE_SRI_PASSWORD=dalcroze77aA@
