Funcionando 100% Datafast + Facturas

--- a/.env
+++ b/.env
@@ -29,3 +29,8 @@ VITE_DATAFAST_LOGO_URL=https://www.datafast.com.ec/images/logo.png
 VITE_SRI_API_URL=http://localhost:3100
 VITE_SRI_EMAIL=businessconnect@businessconnect.com.ec
 VITE_SRI_PASSWORD=dalcroze77aA@
+
+# Session and Authentication Configuration (Frontend)
+VITE_SESSION_TIMEOUT_MINUTES=15
+VITE_EXPIRES_IN_SECONDS=900
+VITE_AUTO_REFRESH_ENABLED=true
